--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bcclp2prova1b",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://vitoreyi.github.io/BCCLP2Prova",
+  "homepage": "http://vitoreyki.github.io/BCCLP2Prova",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
